Adicionado estrutura inicial

--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "discord-bot-mizuno-sarunai",
   "version": "1.0.0",
   "description": "A perfect wife",
-  "main": "index.js",
+  "main": "bot.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node bot.js"
   },
   "repository": {
     "type": "git",
